--- a/resources.qrc
+++ b/resources.qrc
@@ -1,14 +1,11 @@
 <RCC>
-    <qresource>
+    <qresource prefix="/">
         <file>shaders/base.frag</file>
         <file>shaders/base.vert</file>
         <file>shaders/correction.frag</file>
-        <file>shaders/correction.vert</file>
         <file>shaders/posterize.frag</file>
-        <file>shaders/posterize.vert</file>
         <file>shaders/sharpness.frag</file>
-        <file>shaders/sharpness.vert</file>
-        <file>shaders/invert.vert</file>
         <file>shaders/invert.frag</file>
+        <file>shaders/default.vert</file>
     </qresource>
 </RCC>
