--- a/resources.qrc
+++ b/resources.qrc
@@ -8,5 +8,6 @@
         <file>shaders/invert.frag</file>
         <file>shaders/default.vert</file>
         <file>shaders/pixelate.frag</file>
+        <file>shaders/crt.frag</file>
     </qresource>
 </RCC>
